--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,16 @@
 [submodule "external/imgui"]
 	path = external/imgui
 	url = https://github.com/ocornut/imgui.git
+	branch = docking
 [submodule "external/sol2"]
 	path = external/sol2
 	url = https://github.com/ThePhD/sol2.git
 [submodule "external/luajit"]
 	path = external/luajit
 	url = http://luajit.org/git/luajit-2.0.git
+[submodule "external/glfw"]
+	path = external/glfw
+	url = https://github.com/glfw/glfw.git
+[submodule "external/glad"]
+	path = external/glad
+	url = https://github.com/Dav1dde/glad.git
