Implement basic gui for testing

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "external/glad"]
 	path = external/glad
 	url = https://github.com/Dav1dde/glad.git
+[submodule "external/stb/stb"]
+	path = external/stb/stb
+	url = https://github.com/nothings/stb.git
