--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -2,7 +2,7 @@
  
 include(cmakescripts/imgui.cmake)
 
-
+add_subdirectory(stb)
 add_subdirectory(sol2)
 add_subdirectory(glfw)
 add_subdirectory(glad)
