--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,12 @@
 project(roboeye)
 
-add_executable(roboeye main.cpp)
-target_link_libraries(roboeye imgui imgui_impl glfw glad)
+add_subdirectory(gui)
+
+
+add_executable(roboeye 
+    main.cpp
+    FilterApp.cpp)
+target_link_libraries(roboeye imgui imgui_impl glfw glad stb)
 
 install(TARGETS roboeye RUNTIME DESTINATION bin)
 
