Fix cmake files

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -1,8 +1,8 @@
 project(gui)
 cmake_minimum_required(VERSION 2.6)
 
-add_library(imgui STATIC
-    Image.hpp
+add_library(gui STATIC
+    Image.h
     Image.cpp
 )
 
