--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,6 +1,7 @@
  
  
 include(cmakescripts/imgui.cmake)
+include(cmakescripts/luajit.cmake)
 include(cmakescripts/glfw.cmake)
 
 add_subdirectory(stb)
@@ -8,3 +9,4 @@ add_subdirectory(sol2)
 add_subdirectory(glfw)
 add_subdirectory(glad)
 add_subdirectory(imgui_impl)
+
