--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 
 option(TinyMode "TinyMode" OFF)
+option(DevMode "Developer Mode" OFF)
 
 set (CMAKE_CXX_STANDARD 17)
 
