--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 [submodule "external/stb/stb"]
 	path = external/stb/stb
 	url = https://github.com/nothings/stb.git
+[submodule "ttvfs"]
+	path = ttvfs
+	url = https://github.com/fgenesis/ttvfs.git
