--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(glfw)
 add_subdirectory(glad)
 add_subdirectory(imgui_impl)
 add_subdirectory(devtools)
+add_subdirectory(imguitools)
