--- a/external/imgui_impl/CMakeLists.txt
+++ b/external/imgui_impl/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(imgui_impl)
 cmake_minimum_required(VERSION 2.6)
 
-include_directories(PUBLIC imgui_impl)
+
 
 
 
@@ -12,5 +12,5 @@ add_library(imgui_impl STATIC
     imgui_impl_opengl3.h
 )
 target_compile_definitions(imgui_impl PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLAD)
-target_include_directories(imgui_impl PUBLIC imgui_impl)
+target_include_directories(imgui_impl PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(imgui_impl glad)
