--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(gui)
 cmake_minimum_required(VERSION 2.6)
 
+add_subdirectory(gl)
+
 add_library(gui STATIC
     Dockspace.hpp
     Dockspace.cpp
@@ -13,4 +15,4 @@ add_library(gui STATIC
     WindowManagerImpl.cpp
 )
 
-target_link_libraries(gui imgui)
+target_link_libraries(gui imgui glbackend)
