--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -6,6 +6,8 @@ include(cmakescripts/glfw.cmake)
 
 add_subdirectory(stb)
 add_subdirectory(sol2)
+
 add_subdirectory(glfw)
 add_subdirectory(glad)
-add_subdirectory(imgui_impl)
+add_subdirectory(sdl)
+
