Fix luajit linking

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,5 +1,5 @@
- 
- 
+
+
 include(cmakescripts/imgui.cmake)
 include(cmakescripts/luajit.cmake)
 include(cmakescripts/glfw.cmake)
@@ -7,7 +7,10 @@ include(cmakescripts/glfw.cmake)
 add_subdirectory(stb)
 add_subdirectory(sol2)
 
-add_subdirectory(glfw)
+if(${xhfr_Backend} STREQUAL "sdl")
 add_subdirectory(glad)
 add_subdirectory(sdl)
-
+else()
+add_subdirectory(glad)
+add_subdirectory(glfw)
+endif()
