--- a/src/gui/gl/CMakeLists.txt
+++ b/src/gui/gl/CMakeLists.txt
@@ -9,7 +9,7 @@ target_compile_definitions(glbackend PRIVATE XHFR_GL_BACKEND=${BACKEND})
 
 if("${xhfr_Backend}" STREQUAL "sdl")
   add_subdirectory(sdl_opengl3)
-  target_link_libraries(glbackend SDL2 imgui_impl_sdl2)
+  target_link_libraries(glbackend SDL2 hidapi imgui_impl_sdl2)
   set(BACKEND 2)
 else()
   add_subdirectory(glfw_opengl3)
