--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,8 +5,13 @@ add_subdirectory(gui)
 add_library(xhfr STATIC
     xhfr.hpp
     xhfr.cpp)
-target_link_libraries(xhfr dl sol2 imgui stb gui glbackend luajit)
-target_include_directories(xhfr PUBLIC ../external/luajit/src/)
+if(${xhfr_LuaJit})
+    target_link_libraries(xhfr luajit)
+    target_include_directories(xhfr PUBLIC ../external/luajit/src/)
+else()
+    target_link_libraries(xhfr liblua)
+endif()
+target_link_libraries(xhfr sol2 imgui stb gui glbackend)
 target_include_directories(xhfr INTERFACE ../src)
 
 target_include_directories(xhfr PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
