--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.14.5)
 
 option(xhfr_TinyMode "Tiny Mode" OFF)
 option(xhfr_DevMode "Developer Mode" OFF)
+option(xhfr_LuaJit "Use Luajit" OFF)
 
 set(xhfr_Backend "glfw" CACHE STRING "What backend to use. Valid options: glfw, sdl ")
 
