--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 3.14.5)
 option(xhfr_TinyMode "Tiny Mode" OFF)
 option(xhfr_DevMode "Developer Mode" OFF)
 option(xhfr_LuaJit "Use Luajit" OFF)
+set(xhfr_Backend "glfw" CACHE STRING "What backend to use. Valid options: glfw, sdl, sdl-ems")
 
-set(xhfr_Backend "glfw" CACHE STRING "What backend to use. Valid options: glfw, sdl ")
 
 set (CMAKE_CXX_STANDARD 17)
 
