--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -2,7 +2,6 @@
 
 include(cmakescripts/imgui.cmake)
 include(cmakescripts/glfw.cmake)
-
 if(${xhfr_LuaJit})
     include(cmakescripts/luajit.cmake)
 else()
@@ -15,9 +14,12 @@ add_subdirectory(stb)
 add_subdirectory(sol2)
 
 if(${xhfr_Backend} STREQUAL "sdl")
-add_subdirectory(glad)
-add_subdirectory(sdl)
+    add_subdirectory(glad)
+    add_subdirectory(sdl)
+elseif(${xhfr_Backend} STREQUAL "sdl-ems")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s ERROR_ON_UNDEFINED_SYMBOLS=0 -s USE_SDL=2 -s USE_WEBGL2=1 -s WASM=1 -s FULL_ES3=1 -s ALLOW_MEMORY_GROWTH=1 -s BINARYEN_TRAP_MODE=clamp")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s ERROR_ON_UNDEFINED_SYMBOLS=0 -s USE_SDL=2 -s USE_WEBGL2=1 -s WASM=1 -s FULL_ES3=1 -s ALLOW_MEMORY_GROWTH=1 -s BINARYEN_TRAP_MODE=clamp")
 else()
-add_subdirectory(glad)
-add_subdirectory(glfw)
+    add_subdirectory(glad)
+    add_subdirectory(glfw)
 endif()
