--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -3,6 +3,10 @@ cmake_minimum_required(VERSION 3.14.5)
 
 add_subdirectory(backends)
 
+if(${xhfr_FreeType})
+    set(IMGUI_FREETYPE imgui_freetype.h imgui_freetype.cpp)
+endif()
+
 add_library(gui STATIC
     Dockspace.hpp
     Dockspace.cpp
@@ -15,7 +19,15 @@ add_library(gui STATIC
     WindowManagerBase.hpp
     WindowManagerImpl.hpp
     WindowManagerImpl.cpp
+    Fonts.hpp
+    Fonts.cpp
+    ${IMGUI_FREETYPE}
 )
 
 if(${xhfr_FreeType})
+    target_compile_definitions(gui PUBLIC XHFR_FREETYPE)
+    target_link_libraries(gui freetype)
+endif()
+
+
 target_link_libraries(gui imgui fs stb backend)
