--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -13,6 +13,9 @@ endif()
 add_subdirectory(stb)
 add_subdirectory(sol2)
 add_subdirectory(physfs)
+if(${xhfr_FreeType})
+    include(cmakescripts/freetype.cmake)
+endif()
 
 if(${xhfr_Backend} STREQUAL "sdl")
     add_subdirectory(glad)
