--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -11,7 +11,9 @@ else()
     include_directories(SYSTEM lua/src)
 endif()
 
-add_subdirectory(stb)
+if(NOT ${xhfr_stb_external})
+  add_subdirectory(stb)
+endif()
 add_subdirectory(sol2)
 if(NOT ${xhfr_PhysFs_external})
     add_subdirectory(physfs)
