--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,8 @@ set (CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(gui)
 add_subdirectory(fs)
+add_subdirectory(core)
+
 add_library(xhfr STATIC
     xhfr.hpp
     xhfr.cpp)
@@ -14,7 +16,7 @@ else()
     target_link_libraries(xhfr liblua)
 endif()
 
-target_link_libraries(xhfr sol2 imgui stb gui backend fs)
+target_link_libraries(xhfr sol2 imgui stb gui backend fs core spdlog)
 target_include_directories(xhfr INTERFACE ../src)
 
 target_include_directories(xhfr PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
