--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,7 @@
 [submodule "external/trs"]
 	path = external/trs
 	url = git@github.com:xhighway999/trs.git
+[submodule "external/spdlog"]
+	path = external/spdlog
+	url = git@github.com:gabime/spdlog.git
+	branch = v2.x
