--- a/src/gui/backends/CMakeLists.txt
+++ b/src/gui/backends/CMakeLists.txt
@@ -20,6 +20,6 @@ elseif("${xhfr_Backend}" STREQUAL "sdl-ems")
 else()
   add_subdirectory(glfw_opengl3)
   target_include_directories(backend PRIVATE glfw_opengl3)
-  target_link_libraries(backend glfw glad imgui_impl_glfw core)
+  target_link_libraries(backend glfw glad imgui_impl_glfw xhfr_core)
   set(BACKEND 1)
 endif()
