--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,7 @@ else()
     target_link_libraries(xhfr liblua)
 endif()
 
-target_link_libraries(xhfr sol2 imgui stb gui backend fs core spdlog)
+target_link_libraries(xhfr sol2 imgui stb gui backend fs xhfr_core spdlog)
 target_include_directories(xhfr INTERFACE ../src)
 
 target_include_directories(xhfr PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
