--- a/src/gui/backends/CMakeLists.txt
+++ b/src/gui/backends/CMakeLists.txt
@@ -17,9 +17,11 @@ elseif("${xhfr_Backend}" STREQUAL "sdl-ems")
     target_include_directories(backend PRIVATE sdl_ems)
     target_link_libraries(backend imgui_impl_sdl2_ems)
     set(BACKEND 3)
-else()
+elseif("${xhfr_Backend}" STREQUAL "glfw")
   add_subdirectory(glfw_opengl3)
   target_include_directories(backend PRIVATE glfw_opengl3)
   target_link_libraries(backend glfw glad imgui_impl_glfw xhfr_core)
   set(BACKEND 1)
+else()
+    message(FATAL_ERROR "No valid backend")
 endif()
