Add ImageButtonWithText and added return to Links

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -25,6 +25,8 @@ add_library(gui STATIC
     DropEvent.hpp
     Canvas.hpp
     Canvas.cpp
+    Styles.hpp
+    Styles.cpp
     ${IMGUI_FREETYPE}
 )
 
