--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "external/nanovg-nanort"]
 	path = external/nanovg-nanort
 	url = https://github.com/syoyo/nanovg-nanort.git
+[submodule "external/nativefiledialog-extended"]
+	path = external/nativefiledialog-extended
+	url = https://github.com/btzy/nativefiledialog-extended.git
