fix some compiling bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.14.5)
 option(xhfr_TinyMode "Tiny Mode" OFF)
 option(xhfr_DevMode "Developer Mode" OFF)
 option(xhfr_LuaJit "Use Luajit" OFF)
-option(xhfr_FreeType "Use FreeType" ON)
+option(xhfr_FreeType "Use FreeType" OFF)
 option(xhfr_PhysFs_external "Use System/Parent PhysFS library" OFF)
 option(xhfr_stb_external "Use System/Parent stb library" OFF)
 option(xhfr_spdlog_external "Use System/Parent spdlog library" OFF)
